--- a/practicas/practice_01_bicycle_sales/README
+++ b/practicas/practice_01_bicycle_sales/README
@@ -1,1 +1,46 @@
+🚲 Practice 01 — Bicycle Sales Dashboard (2019–2020)
 
+📄 Dataset Description
+This practice uses a fictional dataset commonly used in Power BI courses.
+It simulates sales transactions for a bicycle company during 2019 and 2020, including different types of bicycles, accessories, and replacement parts.
+
+The dataset contains:
+
+Products (bikes, helmets, accessories, parts)
+Product families
+Customers and sales representatives
+Countries, communities, provinces, zones
+Date information (day, month, quarter, year)
+Net and gross sales
+Quantities sold
+This dataset is for educational purposes only.
+
+🎯 Objective of the Practice
+
+The goal of this practice is to build a Power BI dashboard capable of:
+Analyzing sales trends by year and month
+Showing total sales and average sales
+Comparing product categories
+Displaying quantities sold by product type
+Understanding customer segments (wholesalers vs distributors)
+
+📊 Visuals Included in the Report
+
+Line chart: Net sales by year and month
+Bar chart: Units sold by product type
+KPI cards: Total sales, Average sale, Units sold
+Donut chart: Sales by customer type
+Descriptive titles and formatted report background
+
+🛠 Tools Used
+
+Power BI Desktop
+Power Query for basic cleaning
+Calculated columns (Year, Month, Month Name)
+Custom formatting and color themes
+
+📁 Folder Structure
+practice_01_bicycle_sales/
+│── dataset.xlsx
+│── practice_01.pbix
+│── README.md
