--- a/practicas/practice_01_bicycle_sales/README
+++ b/practicas/practice_01_bicycle_sales/README
@@ -43,4 +43,9 @@ Custom formatting and color themes
 practice_01_bicycle_sales/
 │── dataset.xlsx
 │── practice_01.pbix
+│── dashboard_overview.png
 │── README.md
+
+## 📸 Dashboard Preview
+
+![Dashboard Overview](dashboard_overview.png)
