--- a/practicas/practice_01_bicycle_sales/README
+++ b/practicas/practice_01_bicycle_sales/README
@@ -48,4 +48,4 @@ practice_01_bicycle_sales/
 
 ## 📸 Dashboard Preview
 
-![Dashboard Overview](dashboard_overview.png)
+![Dashboard Overview](https://github.com/carminiaeguivar/powerbi-portfolio/blob/main/practicas/practice_01_bicycle_sales/dashboard_overview.png)
